src/objects/User.object
<CustomObject>
    <fields>
        <fullName>AIT_User_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is used to identify Siebel User</description>
        <externalId>true</externalId>
        <label>AIT User ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AIT_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It is a flag to check if user exists in Siebel</description>
        <label>AIT User?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Approval_Tier__c</fullName>
        <description>This field is created to support the Apttus Approval Process for Procurement and Sales contracts.</description>
        <label>APTS Approval Tier</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Manager__c</fullName>
        <description>APTS Manager</description>
        <inlineHelpText>APTS Manager</inlineHelpText>
        <label>APTS Manager</label>
        <relationshipName>APTSManager</relationshipName>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Access_Status__c</fullName>
        <label>Access Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Locked</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Approval_Level__c</fullName>
        <description>Field moved to Approval Matrix table</description>
        <label>Approval Level_OBSOLETE</label>
        <picklist>
            <picklistValues>
                <fullName>Level 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Next_Level_Approver__c</fullName>
        <description>Field moved to Approval Matrix table</description>
        <label>Next Level Approver_OBSOLETE</label>
        <relationshipName>Users</relationshipName>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Area_Controller__c</fullName>
        <label>Region Controller</label>
        <relationshipName>Users</relationshipName>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <picklist>
            <picklistValues>
                <fullName>Sample Area</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DD_Financial_Controller__c</fullName>
        <label>Financial Controller</label>
        <relationshipName>User_FinancialController</relationshipName>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>DSE__DS_Data_Scout_Profile__c</fullName>
        <description>Cloud MDM: enter the name of the Cloud MDM profile for this user. If no Cloud MDM Profile is specified, the default profile will be used</description>
        <inlineHelpText>Cloud MDM: enter the name of the Cloud MDM profile for this user. If no Cloud MDM Profile is specified, the default profile will be used</inlineHelpText>
        <label>Cloud MDM Profile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demo_Auto_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Demo_Auto_Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Demo_Pool__c</fullName>
        <label>Demo Pool</label>
        <picklist>
            <controllingField>Theater__c</controllingField>
            <picklistValues>
                <fullName>Texas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>EVM_Core_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field stores the Core id of the user migrated from MSI SFDC.</description>
        <externalId>true</externalId>
        <label>EVM Core ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EVM_SF_User_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is used as a MSI E SFDC User Id</description>
        <externalId>true</externalId>
        <label>EVM SF User ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EVM_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It is a flag which checks if user exists in MSI SFDC</description>
        <label>EVM User?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employee_R3_Number__c</fullName>
        <label>Employee R3 Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Login_ID__c</fullName>
        <description>Stores the login ID info for integration purpose</description>
        <externalId>true</externalId>
        <label>Login ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager1__c</fullName>
        <inlineHelpText>Manager to approve the Target Accounts and Credit Claims</inlineHelpText>
        <label>Compensation Manager</label>
        <relationshipName>User</relationshipName>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>Manager_Level__c</fullName>
        <label>Level</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Report_Purpose__c</fullName>
        <formula>Manager.FirstName +&apos; &apos;+ Manager.LastName</formula>
        <label>Manager (Report Purpose)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <picklist>
            <picklistValues>
                <fullName>CHAM - Channel Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCAM - Distribution Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMAR - Distributed Marketing Account Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBDM - Inside Business Development Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ICHAM - Inside Channel Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAM - Named Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Region Controller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE - Sales Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vertical Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VP - Vice President</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>R11i_User_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>ID of the user from R11i System</description>
        <externalId>true</externalId>
        <label>R11i User ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>R11i_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Field is created to Check if the user is a R11i user or not</description>
        <label>R11i User?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_for_update_insert__c</fullName>
        <label>Reason for Update/ Insert</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Region field is dependent on the Theater Field</description>
        <label>Region</label>
        <picklist>
            <controllingField>Theater__c</controllingField>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Solution Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail &amp; Hospitality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare &amp; Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation &amp; Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inside Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexico</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NoLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SoLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korea Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South East Asia Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia/New Zealand Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T&amp;L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WLAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State &amp; Local</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Office__c</fullName>
        <description>The values of this field is populated for Users that have access to SB. Picklist LOVs should match with MSI SFDC</description>
        <label>EVM Sales Office</label>
        <picklist>
            <picklistValues>
                <fullName>AT01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ATIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BEIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CN01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZ01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DKIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FIIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FR01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FRIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HK01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HQIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDC1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN01</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Org__c</fullName>
        <description>The values of this field is populated for Users that have access to SB. Picklist LOVs should match with MSI SFDC</description>
        <label>EVM Sales Org</label>
        <picklist>
            <picklistValues>
                <fullName>AT01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CN01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZ01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FR01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HK01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDC1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JP01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MX01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MY01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NL01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NZ01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SG01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZA01</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Short_R3__c</fullName>
        <label>Short R3#</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Region__c</fullName>
        <description>Sub-Region field is a dependent field on Region</description>
        <label>Sub-Region</label>
        <picklist>
            <controllingField>Region__c</controllingField>
            <picklistValues>
                <fullName>Spain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greece</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa &amp; Israel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nordics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria &amp; Switzerland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benelux</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turkey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CE &amp; CEE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Sales Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Sales East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel Sales West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare Ambulatory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare Managed Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inside Sales Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inside Sales East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFG Central &amp; West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFG East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;H North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;H South</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <description>Used Only by EMEA</description>
        <label>Team</label>
        <picklist>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T&amp;L Industry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail, Manuf., Utilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T&amp;L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Channel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Markets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic Accounts</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Theater_Code__c</fullName>
        <formula>IF(ISPICKVAL(Theater__c,&quot;APAC&quot;),&quot;APAC&quot;,
IF(ISPICKVAL(Theater__c,&quot;NA&quot;),&quot;NA&quot;,
IF(ISPICKVAL(Theater__c,&quot;LATAM&quot;),&quot;LACR&quot;,
IF(ISPICKVAL(Theater__c,&quot;EMEA&quot;),&quot;EMEA&quot;,
IF(ISPICKVAL(Theater__c,&quot;WORLDWIDE&quot;),&quot;WORLDWIDE&quot;,
&quot;Unknown&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Theater Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Theater__c</fullName>
        <description>The value of this field should match with SB expected values. Picklist LOVs should match with MSI SFDC</description>
        <label>Theater</label>
        <picklist>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LATAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_Id_18_Digit__c</fullName>
        <formula>Id
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
    IF(FIND(MID(Id,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
    +IF(FIND(MID(Id,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
    +IF(FIND(MID(Id,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
    +IF(FIND(MID(Id,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
    +IF(FIND(MID(Id,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
    )+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
    IF(FIND(MID(Id,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
    +IF(FIND(MID(Id,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
    +IF(FIND(MID(Id,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
    +IF(FIND(MID(Id,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
    +IF(FIND(MID(Id,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
    )+1,1)
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,(
    IF(FIND(MID(Id,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0)
    +IF(FIND(MID(Id,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0)
    +IF(FIND(MID(Id,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0)
    +IF(FIND(MID(Id,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0)
    +IF(FIND(MID(Id,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0)
    )+1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Id 18 Digit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_License_Type__c</fullName>
        <formula>Profile.UserLicense.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User License Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zebra_Currency__c</fullName>
        <description>Custom field to hold a currency value. Used as a stop-gap in the absence of a multi-currency solution.</description>
        <label>Zebra Currency</label>
        <picklist>
            <picklistValues>
                <fullName>AED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AUD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BRL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>COP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DKK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GBP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HKD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ILS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JPY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KRW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KWD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MXN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MYR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NOK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NZD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OMR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RUR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SGD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>THB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zebra_Organization__c</fullName>
        <description>User&apos;s organization. This LOV should match the current organization definition in Siebel.</description>
        <label>Zebra Organization</label>
        <picklist>
            <picklistValues>
                <fullName>Zebra NALA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zebra EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zebra APAC USD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zebra APAC RMB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Default Organization</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>briefingedge__Briefing_Edge_Password__c</fullName>
        <label>BriefingEdge Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>briefingedge__Briefing_Edge_Username__c</fullName>
        <label>BriefingEdge Username</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <validationRules>
        <fullName>User_LoginId_Validation</fullName>
        <active>false</active>
        <description>Validation rule to check if the Login Id is populated on the record</description>
        <errorConditionFormula>AND(ISPICKVAL( Profile.UserType,  &apos;Standard&apos;),  ISBLANK(Login_ID__c))</errorConditionFormula>
        <errorDisplayField>Login_ID__c</errorDisplayField>
        <errorMessage>Please enter Login Id</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>User_Organization_Validation</fullName>
        <active>false</active>
        <description>Validation rule to check if the Login Id is populated on the record</description>
        <errorConditionFormula>AND(ISPICKVAL( Profile.UserType,  &apos;Standard&apos;),  ISBLANK( text( Zebra_Organization__c ) ))</errorConditionFormula>
        <errorDisplayField>Zebra_Organization__c</errorDisplayField>
        <errorMessage>Please enter Zebra Organization</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>User_Theater_Validation</fullName>
        <active>false</active>
        <description>Validation rule to check if the Login Id is populated on the record</description>
        <errorConditionFormula>AND(ISPICKVAL( Profile.UserType,  &apos;Standard&apos;),  ISBLANK( text(Theater__c) ))</errorConditionFormula>
        <errorDisplayField>Theater__c</errorDisplayField>
        <errorMessage>Please enter Theater</errorMessage>
    </validationRules>
</CustomObject>